--- a/pagina_iniziale.html
+++ b/pagina_iniziale.html
@@ -88,12 +88,12 @@
         <div class="step">
           <div class="circle">4</div>
           <div class="title_s">Parti per l'avventura</div>
-          <div class="description">Organizza insieme il viaggio dei tuoi sogni!</div>
+          <div class="description">Organizza il viaggio dei tuoi sogni!</div>
         </div>
         <div class="step">
           <div class="circle">5</div>
           <div class="title_s">Racconta la tua esperienza</div>
-          <div class="description"> Posta le foto del viaggio e l'itinerario da voi scelto</div>
+          <div class="description"> Posta le foto del viaggio e l'itinerario da te scelto</div>
         </div>
 
         <div class="step">
