--- a/password.html
+++ b/password.html
@@ -52,4 +52,36 @@
   </footer>
 
 </body>
+<script>
+  const input = document.querySelector('.forgot-input');
+  const btn = document.querySelector('.send-link-btn');
+
+  btn.addEventListener('click', async () => {
+    const email = input.value.trim();
+
+    if (!email) {
+      alert('Inserisci la tua email');
+      return;
+    }
+
+    try {
+      const response = await fetch('http://localhost:4000/forgot-password', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ email })
+      });
+
+      if (response.ok) {
+        alert('Email inviata! Controlla la tua casella.');
+      } else {
+        const errorText = await response.text();
+        alert('Errore: ' + errorText);
+      }
+    } catch (err) {
+      alert('Errore di connessione: ' + err.message);
+    }
+  });
+</script>
 </html>
