--- a/password.html
+++ b/password.html
@@ -12,7 +12,7 @@
   <header class="top-bar">
     <div class="logo-area">
      
-      <img src="immagini/travel.png" alt="Wanderlust Logo" class="brand-logo">
+      <img src="immagini/logo.png" alt="Wanderlust Logo" class="brand-logo">
     </div>
     <nav>
       <a href="login.html" class="login-link">Accedi</a>
