--- a/comingsoon.html
+++ b/comingsoon.html
@@ -21,19 +21,32 @@
         }
       }
     };
+    
   </script>
 
   <title>Coming Soon – Wanderlust</title>
 </head>
 
 <body class="min-h-screen bg-cream text-navy flex items-center justify-center font-sans">
+  <!-- Sfondo nitido con overlay chiaro -->
+<div class="absolute inset-0 z-0">
+  <img src="immagini/download.jpg" alt="Sfondo travel" class="w-full h-full object-cover" />
+  <div class="absolute inset-0 bg-white bg-opacity-30"></div>
+</div>
+  <a href="pagina_iniziale.html" class="absolute top-4 left-4">
+  <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 fill-[#0A2342] hover:opacity-80 transition" viewBox="0 0 24 24">
+    <path d="M12 3l9 8h-3v9h-12v-9h-3l9-8z"/>
+  </svg>
+  </a>
+
   <div class="max-w-md text-center bg-white/60 backdrop-blur-lg rounded-2xl shadow-lg p-8 space-y-6">
     <div class="w-11/12 max-w-md text-center bg-white/60 …"></div>
     <h1 class="text-3xl sm:text-4xl font-extrabold">App in arrivo!</h1>
     <p class="text-base sm:text-lg">Restate sintonizzati: stiamo preparando qualcosa di straordinario per voi!</p>
 
     <!-- Contact form per iscriversi alla beta -->
-    <form action="/api/beta_signup.php" method="POST" class="space-y-4">
+    <form id="betaForm" class="space-y-4">
+
       <input type="email" name="email" placeholder="La tua email" required
              class="w-full bg-cream border border-navy/30 rounded-lg p-3 placeholder-navy/60 focus:ring-1 focus:ring-navy-light focus:border-navy-light transition" />
       <button type="submit"
@@ -44,5 +57,47 @@
 
     <p class="text-sm text-navy/60">Riceverai un link non appena l'app sarà disponibile.</p>
   </div>
+
+
+  <script>
+    // Gestione del form di iscrizione alla beta
+    //attendo caricamento del DOM in modo che gli elementi siano pronti
+    document.addEventListener('DOMContentLoaded', () => {
+      const form = document.getElementById('betaForm');
+      const emailInput = form.querySelector('input[name="email"]');
+
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const email = emailInput.value.trim();
+        if (!email) {
+          alert('Inserisci una email valida');
+          return;
+        }
+        //invio della richiesta al server
+        try {
+          const response = await fetch('http://localhost:4000/beta-signup', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ email })
+          });
+
+          if (response.ok) {
+            alert('Grazie! Ti abbiamo inviato una mail di conferma 📬');
+            emailInput.value = '';
+          } else {
+            const text = await response.text();
+            alert('Errore: ' + text);
+          }
+        } catch (err) {
+          alert('Errore di rete: ' + err.message);
+        }
+      });
+    });
+  </script>
+
+
 </body>
 </html>
+
+
