--- a/password.html
+++ b/password.html
@@ -13,6 +13,7 @@
     <div class="logo-area">
      
       <img src="immagini/logo.png" alt="Wanderlust Logo" class="brand-logo">
+         <span class="text-4xl font-bold text-navy">Wanderlust</span>
     </div>
     <nav>
       <a href="login.html" class="login-link">Accedi</a>
