--- a/password.html
+++ b/password.html
@@ -2,8 +2,9 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Problemi di accesso - Wanderlust</title>
-  <!-- Collegamento al CSS dedicato (o lo stesso CSS usato per login) -->
+  <!-- Collegamento al CSS dedicato -->
   <link rel="stylesheet" href="css/style_password.css">
 </head>
 <body>
@@ -11,9 +12,8 @@
   <!-- Barra superiore (header) -->
   <header class="top-bar">
     <div class="logo-area">
-     
       <img src="immagini/logo.png" alt="Wanderlust Logo" class="brand-logo">
-         <span class="text-4xl font-bold text-navy">Wanderlust</span>
+      <span class="text-4xl font-bold text-navy">Wanderlust</span>
     </div>
     <nav>
       <a href="login.html" class="login-link">Accedi</a>
@@ -34,8 +34,6 @@
     <input type="text" placeholder="E-mail, telefono o nome utente" class="forgot-input">
     <button class="send-link-btn">Invia il link di accesso</button>
 
-  
-
     <!-- Separatore con “O” -->
     <div class="separator">
       <div class="line"></div>
@@ -49,40 +47,42 @@
 
   <!-- Footer con link al login -->
   <footer class="forgot-footer">
-    <a href="login.html" class="back-to-login">Torna alla pagina di accesso</a>
+    <div class="footer-link-box">
+      <a href="login.html" class="back-to-login">Torna alla pagina di accesso</a>
+    </div>
   </footer>
 
-</body>
-<script>
-  const input = document.querySelector('.forgot-input');
-  const btn = document.querySelector('.send-link-btn');
+  <script>
+    const input = document.querySelector('.forgot-input');
+    const btn = document.querySelector('.send-link-btn');
 
-  btn.addEventListener('click', async () => {
-    const email = input.value.trim();
+    btn.addEventListener('click', async () => {
+      const email = input.value.trim();
 
-    if (!email) {
-      alert('Inserisci la tua email');
-      return;
-    }
-
-    try {
-      const response = await fetch('http://localhost:4000/forgot-password', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ email })
-      });
-
-      if (response.ok) {
-        alert('Email inviata! Controlla la tua casella.');
-      } else {
-        const errorText = await response.text();
-        alert('Errore: ' + errorText);
+      if (!email) {
+        alert('Inserisci la tua email');
+        return;
       }
-    } catch (err) {
-      alert('Errore di connessione: ' + err.message);
-    }
-  });
-</script>
+
+      try {
+        const response = await fetch('http://localhost:4000/forgot-password', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ email })
+        });
+
+        if (response.ok) {
+          alert('Email inviata! Controlla la tua casella.');
+        } else {
+          const errorText = await response.text();
+          alert('Errore: ' + errorText);
+        }
+      } catch (err) {
+        alert('Errore di connessione: ' + err.message);
+      }
+    });
+  </script>
+</body>
 </html>
