--- a/pagina_iniziale.html
+++ b/pagina_iniziale.html
@@ -44,6 +44,7 @@
     </div>
 
   </div>
+  <div class="cont">
     <h2 style="margin: 40px; margin-bottom: 10px;">Come Funziona</h2>
     <div class="description" style="margin-bottom: 20px;">Connettersi con altri viaggiatori non è mai stato così semplice!</div>
 <div class="contenitore_step" id="come_funziona">
@@ -94,6 +95,8 @@
             <strong>- Stefano P.</strong>
         </div>
     </section>
+</div>
+
     <div class="next-section"  >
         <div class="contenitore_immagini"> 
             <img src="https://i.pinimg.com/736x/e2/50/a1/e250a1bc3373c5c1b7ce0128d63475b4.jpg" class="immagine" alt="errore caricamnto immagine" >
