--- a/password.html
+++ b/password.html
@@ -4,51 +4,122 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Problemi di accesso - Wanderlust</title>
+
+  <!-- Tailwind + custom palette (necessario per i colori navy) -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            cream: '#FDF7E3',
+            navy: '#0A2342',
+            'navy-light': '#12315C',
+            'navy-dark': '#06162F'
+          }
+        }
+      }
+    };
+  </script>
+
   <!-- Collegamento al CSS dedicato -->
   <link rel="stylesheet" href="css/style_password.css">
 </head>
-<body>
+<body class="bg-cream text-navy font-sans">
 
-  <!-- Barra superiore (header) -->
-  <header class="top-bar">
-    <div class="logo-area">
-      <img src="immagini/logo.png" alt="Wanderlust Logo" class="brand-logo">
-      <span class="text-4xl font-bold text-navy">Wanderlust</span>
+  <!-- ============================
+       HEADER FISSO (barra superiore)
+       ============================ -->
+  <header class="fixed top-0 left-0 w-full bg-white/60 backdrop-blur-md z-20">
+    <div class="max-w-7xl mx-auto flex flex-col sm:flex-row items-center sm:justify-between 
+                px-6 py-3">
+      <!-- Logo + “Wanderlust” -->
+      <div class="flex items-center space-x-2 mb-3 sm:mb-0">
+        <img
+          src="immagini/logo.png"
+          alt="Wanderlust Logo"
+          class="h-8 w-8 object-contain"
+        />
+        <span class="text-2xl font-semibold text-navy" style="font-family: 'secondo_font', serif;">
+          Wanderlust
+        </span>
+      </div>
+
+      <!-- Pulsanti “Accedi” e “Iscriviti” -->
+      <nav class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-4">
+        <a
+          href="login.html"
+          class="bg-navy hover:bg-navy-light text-white text-sm font-medium 
+                 px-4 py-2 rounded transition"
+        >
+          Accedi
+        </a>
+        <a
+          href="register.html"
+          class="bg-navy hover:bg-navy-light text-white text-sm font-medium 
+                 px-4 py-2 rounded transition"
+        >
+          Iscriviti
+        </a>
+      </nav>
     </div>
-    <nav>
-      <a href="login.html" class="login-link">Accedi</a>
-      <a href="register.html" class="signup-link">Iscriviti</a>
-    </nav>
   </header>
 
-  <!-- Container principale con box centrale -->
-  <div class="forgot-container">
-    <img src="immagini/shield.png" alt="Lock Icon" class="lock-icon">
+  <!-- Spazio uniforme sotto l’header (circa 64px) -->
+  <div class="mt-16"></div>
 
-    <h2>Problemi di accesso?</h2>
-    <p class="subtitle">
-      Inserisci il tuo indirizzo e-mail, il numero di telefono o il nome utente e ti invieremo un link per accedere di nuovo al tuo account.
+  <!-- ============================
+       CONTENUTO PRINCIPALE: BOX “Problemi di accesso”
+       ============================ -->
+  <div class="forgot-container max-w-md mx-auto bg-white rounded-lg shadow-lg 
+              px-6 py-8 space-y-6">
+    <div class="flex justify-center">
+      <img src="immagini/shield.png" alt="Lock Icon" class="h-16 w-16">
+    </div>
+
+    <h2 class="text-2xl font-semibold text-center">Problemi di accesso?</h2>
+    <p class="text-center text-sm text-gray-700">
+      Inserisci il tuo indirizzo e-mail, il numero di telefono o il nome utente 
+      e ti invieremo un link per accedere di nuovo al tuo account.
     </p>
 
     <!-- Campo input e bottone -->
-    <input type="text" placeholder="E-mail, telefono o nome utente" class="forgot-input">
-    <button class="send-link-btn">Invia il link di accesso</button>
+    <input 
+      type="text" 
+      placeholder="E-mail, telefono o nome utente" 
+      class="forgot-input w-full border border-gray-300 rounded-md p-3 focus:outline-none 
+             focus:ring-2 focus:ring-navy-light focus:border-navy-light transition" 
+    />
+    <button 
+      class="send-link-btn w-full bg-navy hover:bg-navy-light text-white text-base font-medium 
+             rounded-md py-3 transition"
+    >
+      Invia il link di accesso
+    </button>
 
     <!-- Separatore con “O” -->
-    <div class="separator">
-      <div class="line"></div>
-      <div class="or">O</div>
-      <div class="line"></div>
+    <div class="separator flex items-center justify-center space-x-2">
+      <div class="line h-px flex-1 bg-gray-300"></div>
+      <div class="or text-gray-500">O</div>
+      <div class="line h-px flex-1 bg-gray-300"></div>
     </div>
 
     <!-- Creazione nuovo account -->
-    <a href="register.html" class="create-account">Crea nuovo account</a>
+    <div class="text-center">
+      <a href="register.html" class="create-account text-navy font-medium hover:underline transition">
+        Crea nuovo account
+      </a>
+    </div>
   </div>
 
-  <!-- Footer con link al login -->
-  <footer class="forgot-footer">
-    <div class="footer-link-box">
-      <a href="login.html" class="back-to-login">Torna alla pagina di accesso</a>
+  <!-- ============================
+       FOOTER: link al login
+       ============================ -->
+  <footer class="forgot-footer mt-8 mb-8">
+    <div class="footer-link-box text-center">
+      <a href="login.html" class="back-to-login text-navy hover:underline font-medium">
+        Torna alla pagina di accesso
+      </a>
     </div>
   </footer>
 
